simple home page fixing paths

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="aGame Company home page">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/assets/ico/favicon.png">
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>aGame Company</title>
 
@@ -13,7 +13,7 @@
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/assets/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="assets/css/jumbotron-narrow.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -105,7 +105,7 @@
 			var SiteRouter = Backbone.Router.extend({
 			
 			  routes: {
-			  	"": "contact",
+			  	"": "home",
 			    "home": "home",
 			    "about": "about",
 			    "contact": "contact"
