--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<script type="text/html" id='content_contact'>
 		<div class="row marketing">
 			<div class="col-lg-6">
-				<h4>Keeping it simple</h4>
-					Mail the CEO Kjartan Akil Jónsson, kjartan(at)agamecompany.com
+				<h4>Keep it simple</h4>
+					Mail Kjartan Akil Jónsson, kjartan(at)agamecompany.com
 			</div>
 		</div>
 		</script>
